--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Hiekki4/controlpanel.js.git"
+    "url": "https://github.com/Hiekki4/controlpanel.js"
   },
   "keywords": [
     "controlpanel",
