--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "controlpanel.js",
-  "version": "1.5.0",
+  "version": "1.5.1",
   "description": "API wrapper for ControlPanel",
   "main": "src/index.js",
   "scripts": {
-    "test": ""
+    "test": "node test/index.js"
   },
   "repository": {
     "type": "git",
